# LookaheadReasoning

./: README.md  main.py  pyproject.toml  report_prefix.py
scripts/: README.md  analyze_accept_rate.py  run_dataset.py
scripts/ablation/: README.md  analyze_accept_rate.py  run_dataset.py
src/: __init__.py  lr.py  lr_tree.py  vllm_model.py
