[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lookahead-reasoning"
version = "0.1.0"
description = "Lookahead Reasoning"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "transformers",
    "fschat",
    "openai",
    "einops",
    "torch",
    "tqdm",
    "requests",
]

[project.scripts]
lookahead-reasoning = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

