[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lookahead-reasoning"
version = "0.1.0"
description = "Lookahead Reasoning"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "vllm==0.10.1",
    "dynasor @ git+https://github.com/hao-ai-lab/Dynasor.git",
]

[project.scripts]
lookahead-reasoning = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

